--- a/README.Rmd
+++ b/README.Rmd
@@ -15,4 +15,13 @@ knitr::opts_chunk$set(
 
 # quine
 
-Quines in R
+A trival (non-empty) [quine](https://en.wikipedia.org/wiki/Quine_(computing)) in
+R, just for the hell of it: the function `quine()` outputs its own source code
+as a language object.
+
+## Installation
+
+```{r eval = FALSE}
+# install.packages("devtools")
+devtools::install_github("egnha/quine")
+```
