--- a/README.Rmd
+++ b/README.Rmd
@@ -19,8 +19,8 @@ knitr::opts_chunk$set(
 # quine
 
 A trival (non-empty) [quine](https://en.wikipedia.org/wiki/Quine_(computing)) in
-R, just for the hell of it: the function `quine()` outputs its own source code
-as a language object.
+R, just for the hell of it: the functions `quine_lang()` and `quine_str()` are
+quines that output a language object and string, respectively.
 
 ## Installation
 
