--- a/README.Rmd
+++ b/README.Rmd
@@ -22,6 +22,9 @@ A trival (non-empty) [quine](https://en.wikipedia.org/wiki/Quine_(computing)) in
 R, just for the hell of it: the functions `quine_lang()` and `quine_str()` are
 quines that output a language object and string, respectively.
 
+The file `inst/bin/quine` is the same quine function as a script. Executing it
+outputs its contents, i.e., `cat quine` and `./quine` are identical.
+
 ## Installation
 
 ```{r eval = FALSE}
